add GET method for getting announcement page