@@ -5,14 +5,12 @@ import org.springframework.data.domain.Page;
 import sit.int221.sas.dtos.PageDTO;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ListMapper {
     private static final ListMapper listMapper = new ListMapper();
     private ListMapper() { }
     public <S, T> List<T> mapList(List<S> source, Class<T> targetClass, ModelMapper modelMapper) {
-        return source.stream().map(entity -> modelMapper.map(entity, targetClass))
-                .collect(Collectors.toList());
+        return source.stream().map(entity -> modelMapper.map(entity, targetClass)).toList();
     }
     public static ListMapper getInstance() {
         return listMapper;
